WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258826
Highlight range does not have invalid checks
https://bugs.webkit.org/show_bug.cgi?id=258826
Summary
Highlight range does not have invalid checks
Jessica Cheung
Reported
2023-07-03 14:33:43 PDT
https://www.w3.org/TR/css-highlight-api-1/#range-invalidation
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-07-03 14:34:04 PDT
<
rdar://problem/111706100
>
Jessica Cheung
Comment 2
2023-07-06 13:05:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15608
EWS
Comment 3
2023-07-12 17:54:51 PDT
Committed
266019@main
(8afe94ae85ec): <
https://commits.webkit.org/266019@main
> Reviewed commits have been landed. Closing PR #15608 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug