Add invalid checks for static ranges https://bugs.webkit.org/show_bug.cgi?id=258826 rdar://111706100

Reviewed by Ryosuke Niwa.

Added invalid checks for static range.
Thus, ignoring the invalid range when painting highlights.
Changed TestExpectations due to more tests passing.

* LayoutTests/TestExpectations:
* Source/WebCore/dom/StaticRange.cpp:
(WebCore::StaticRange::computeRangeValidity const):
(WebCore::StaticRange::isValidForPaintingHighlights const):
* Source/WebCore/dom/StaticRange.h:
* Source/WebCore/rendering/MarkedText.cpp:
(WebCore::MarkedText::collectForHighlights):
* Source/WebCore/rendering/StyledMarkedText.cpp:
(WebCore::coalesceAdjacentWithSameRanges):

Canonical link: https://commits.webkit.org/266019@main